@@ -1,5 +1,12 @@
 2004-12-17 Bart Hakvoort  <gparted@users.sf.net>
 
+	* include/GParted_Core.h,
+	  src/GParted_Core.cc: Removed 'deep_scan' flag. From now on all scans are 'deep scans'.
+	* include/Win_GParted.h,
+	  src/Win_GParted.cc: Gui is now loaded before anything else. (#161054)
+
+2004-12-17 Bart Hakvoort  <gparted@users.sf.net>
+
 	* src/Win_GParted.cc: fixed bug with enabling/disabling 'copy' in menus.
 	* src/ext2.cc,
 	  src/ext3.cc: added missing check while deciding to disable/enable copy feature.
